cmake_minimum_required(VERSION 3.30)
project(CPPmain)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPPmain main.cpp
        Swiat.cpp
        Swiat.h
        Organizm.cpp
        Organizm.h
        Roslina.cpp
        Roslina.h
        Zwierze.cpp
        Zwierze.h
        Wilk.cpp
        Wilk.h
        Trawa.cpp
        Trawa.h
        Mlecz.cpp
        Mlecz.h
        Owca.cpp
        Owca.h
        Lew.cpp
        Lew.h
        Zolw.cpp
        Zolw.h
        Kot.cpp
        Kot.h
        Guarana.cpp
        Guarana.h)
